--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "lodash": "^4.17.5",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.1",
     "nunjucks": "^3.1.2"
