--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "lodash": "^4.17.5",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.1",
-    "nunjucks": "^3.1.2"
+    "nunjucks": "^3.1.2",
+    "socketio": "^1.0.0"
   }
 }
